--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "Budget Tracker",
+    "name": "Budget-Tracker",
     "short_name": "budgeter",
     "description": "An app that allows you to track transactions and see your overall budget.",
     "background_color": "#01579b",
